--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ button:active{
 /* Event Bubbling */
 
 main{
-    background: linear-gradient(to right bottom, rgb(66, 66, 66), black);
+    background: linear-gradient(to right bottom, rgb(22, 22, 22), rgba(0, 0, 0, 0.486));
     padding: 20px;
 }
 
@@ -107,9 +107,86 @@ section{
 .all-reels{
     height: 100%;
     width: 100%;
+    border-radius: 10px;
 }
 
 .reel{
     height: 100%;
     width: 100%;
+    margin-bottom: 25px;
+    position: relative;
+    border-radius: 10px;
+}
+
+img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.reel .bottom{
+    padding: 30px 20px;
+    background: linear-gradient(black black);
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.bottom .user{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.bottom .user img{
+    height: 30px;
+    width: 30px;
+    border-radius: 500%;
+    object-fit: cover;
+}
+
+.bottom .user h4{
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.bottom > h3{
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.bottom .user button{
+    background-color: transparent;
+    padding: 2px 6px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.right{
+    position: absolute;
+    width: 40px;
+    right: 0;
+    bottom: 0;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    transform: translateX(100%);
+} 
+
+.right i{
+    font-size: 25px;
+}
+
+.right h6{
+    font-size: 16px;
+}
+
+.right div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
