--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ main{
 
 section{
     height: 100%;
-    width: 500px;
-    background-color: black;
+    width: 400px;
+    /* background-color: black; */
     margin: auto;
 }
 
@@ -108,6 +108,13 @@ section{
     height: 100%;
     width: 100%;
     border-radius: 10px;
+    position: relative;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+}
+
+.all-reels::-webkit-scrollbar{
+    display: none;
 }
 
 .reel{
@@ -115,10 +122,14 @@ section{
     width: 100%;
     margin-bottom: 25px;
     position: relative;
+    overflow: hidden;
     border-radius: 10px;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    scroll-behavior: smooth;
 }
 
-img{
+video{
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -166,22 +177,32 @@ img{
 
 .right{
     position: absolute;
-    width: 40px;
-    right: 0;
-    bottom: 0;
-    padding: 30px;
     display: flex;
     flex-direction: column;
+    width: 40px;
+    right: 0;
+    bottom: 8%;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
     gap: 15px;
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
+    /* background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.16)); */
 } 
 
+.right div{
+    height: 50px;
+    width: 50px;
+}
+
 .right i{
+    pointer-events: none;
     font-size: 25px;
 }
 
 .right h6{
     font-size: 16px;
+    pointer-events: none;
 }
 
 .right div{
@@ -189,4 +210,12 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.love{
+    color: red;
+}
+
+.right h4{
+    pointer-events: none;
 }
